--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lock Delivery</string>
     <string name="action_settings">Settings</string>
     <string name="btn_Lock">Lock/Unlock</string>
+    <string name="btn_register">Register</string>
 </resources>
